Fix for overflow text on large titles.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -104,10 +104,14 @@ h4, h5, h6 {
 		margin-bottom: 1rem;
 	}
 	.main li.entry>h1.entry-title>a {
+        display: block;
 		background-color: #2f2f2f;
 		color: #efefef;
 		padding: 0.4rem 0.8rem 0.4rem 0.8rem;
 		text-decoration: none;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
 	}
 	.main li.entry>h1.entry-title>a:hover {
 		text-decoration: underline;
